Added Testing functionalities

--- a/passwordStrengthTester.html
+++ b/passwordStrengthTester.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-  <input type="text" id="password-input">
+  <input type="text" id="password-input" data-state="public">
   <button id="visibility">Visibility</button>
   <button id="test">Test</button>
   <div class="strengh-indicator">
