--- a/passwordStrengthTester.html
+++ b/passwordStrengthTester.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/fe793112da.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="passwordStrengthTester.css">
   <script src="passwordStrengthTester.js" defer></script>
   <title>Document</title>
 </head>
 <body>
   <input type="text" id="password-input" data-state="public">
-  <button id="visibility">Visibility</button>
+  <button id="button-visibility"><i class="far fa-eye" id="visibility"></i></button>
   <button id="test">Test</button>
   <div class="strengh-indicator">
     <div id="first-milestone" class="verifier"></div>
